--- a/src/pages/ViewHome/style.scss
+++ b/src/pages/ViewHome/style.scss
@@ -158,7 +158,78 @@ body {
 }
 
 .map--description{
-	border: 1px solid red;
+	width: 100%;
+	height: 200px;
+	padding: 30px;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
+	border-radius: 5px;
+	box-shadow: 0px 3px 15px 3px rgba(68, 133, 85, 0.15);
+}
+
+.map--labels{
+	padding: 10px;
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+  color: #333333;	
+}
+
+.map--inputs{
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+  color: #333333;
+	padding: 10px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.txt-startin{
+	width: 35%;
+	padding: 10px 20px;
+	color: inherit;
+	border: 1px solid #e2e8f0;
+	background-color: #fff;
+	border-radius: 4px;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-create{
+	width: 30%;
+	line-height: 1.5;
+	text-align: center;
+	vertical-align: middle;
+	background-color: transparent;
+	border: 1px solid #e2e8f0;
+	cursor: pointer;
+	border-radius: 4px;
+	color: #fff;
+	border-color: rgba(7, 175, 136, 1);
+	background-color: rgba(7, 175, 136, 1);
+	box-shadow: 0 2px 0 rgb(0 0 0 / 5%), inset 0 1px 0 rgb(255 255 255 / 10%);
+	padding: 5px;
+	font-size: 1.125rem;
+}
+
+.btn-reset{
+	width: 30%;
+	line-height: 1.5;
+	text-align: center;
+	vertical-align: middle;
+	background-color: transparent;
+	border: 1px solid #e2e8f0;
+	cursor: pointer;
+	border-radius: 4px;
+	color: #fff;
+	border-color: rgb(175, 7, 7);
+	background-color: rgb(175, 18, 7);
+	box-shadow: 0 2px 0 rgb(0 0 0 / 5%), inset 0 1px 0 rgb(255 255 255 / 10%);
+	padding: 5px;
+	font-size: 1.125rem;
+}
+
+.alert-body {
+	padding-top: 70px;
 }
