--- a/src/pages/ViewHome/style.scss
+++ b/src/pages/ViewHome/style.scss
@@ -5,7 +5,6 @@
 }
 
 body {
-	min-height: 100%;
 	background-color: #F9F9FB;
 	font-family: 'Plus Jakarta Sans',sans-serif;
 	color: #1f272a;
@@ -69,12 +68,12 @@ body {
 
 .by--description{
 	>h4{
-		width: 250px;
+		display: initial;
 		border-radius: 4px;
 		background-color: rgba(255, 255, 255, 0.1);
 		font-size: 0.9375rem;
 		font-weight: lighter;
-		padding: 5px;
+		padding: 10px;
 	}
 }
 
@@ -91,40 +90,71 @@ body {
 	width: 80vw;
 	margin-top: -50px;
 	border-radius: 5px;
-	height: 600px;
+	min-height: 600px;
+	max-height: 700px;
 	padding: 50px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 }
 
-.candidate--description{
+.map--description{
 	width: 100%;
-	height: 150px;
+	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	border-radius: 5px;
+}
+
+.map--labels{
+	padding: 10px;
+	font-size: 18px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
+  color: #333333;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	>label{
+		text-align: justify;
+		text-justify: inter-word;
+	}
+}
+
+.goal_map{
+	max-height: 275px;
+	max-width: 400px;
+	width: 100%;
+  height: auto;
+	margin: 20px 0;
+}
+
+.inputs--description{
+	width: 100%;
 	padding: 30px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	border-radius: 5px;
-	box-shadow: 0px 3px 15px 3px rgba(68, 133, 85, 0.15);
+	border-radius: 5px;	
 }
 
-.candidate--labels{
+.inputs--labels{
 	width: 40%;
 	display: flex;
-	flex-direction: row;
-
+	flex-direction: column;
+	align-items: flex-end;
+	justify-content: space-around;
 	>label{
 		font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
     color: #333333;
 		font-weight: 400;
     line-height: 1.5;
     font-size: 18px;
-	}
-	
+		margin-right: 10px;
+	}	
 }
 
-.candidate--inputs{
+.inputs--inputs{
 	width: 40%;
 	display: flex;
 	flex-direction: column;
@@ -138,6 +168,7 @@ body {
     width: 100%;
     border-radius: 4px;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+		margin-bottom: 10px;
 	}
 
 	>button{
@@ -157,22 +188,14 @@ body {
 	}
 }
 
-.map--description{
-	width: 100%;
-	height: 200px;
-	padding: 30px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	border-radius: 5px;
-	box-shadow: 0px 3px 15px 3px rgba(68, 133, 85, 0.15);
-}
-
-.map--labels{
-	padding: 10px;
-	font-size: 18px;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
-  color: #333333;	
+.txt-startin{
+	width: 35%;
+	padding: 10px 20px;
+	color: inherit;
+	border: 1px solid #e2e8f0;
+	background-color: #fff;
+	border-radius: 4px;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .map--inputs{
@@ -186,18 +209,8 @@ body {
 	align-items: center;
 }
 
-.txt-startin{
-	width: 35%;
-	padding: 10px 20px;
-	color: inherit;
-	border: 1px solid #e2e8f0;
-	background-color: #fff;
-	border-radius: 4px;
-	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
 .btn-create{
-	width: 30%;
+	width: 40%;
 	line-height: 1.5;
 	text-align: center;
 	vertical-align: middle;
@@ -214,7 +227,7 @@ body {
 }
 
 .btn-reset{
-	width: 30%;
+	width: 40%;
 	line-height: 1.5;
 	text-align: center;
 	vertical-align: middle;
@@ -230,6 +243,16 @@ body {
 	font-size: 1.125rem;
 }
 
+.alert-main{
+	justify-content: space-between;
+}
+
 .alert-body {
-	padding-top: 70px;
+	padding: 30px;
+  text-align: justify !important;
+}
+
+.alert-button{
+	margin-top: 0px;
+  margin-bottom: 10px;
 }
